updated checkAlgorithms.java to be compatible with JDK8